[gd_scene load_steps=8 format=2]

[ext_resource path="res://Systems/Power/PowerReceiver.gd" type="Script" id=1]
[ext_resource path="res://addons/gloot/inventory_grid.gd" type="Script" id=2]
[ext_resource path="res://Things/Things/DeskThing.gd" type="Script" id=3]
[ext_resource path="res://Systems/Work/WorkComponent.gd" type="Script" id=4]
[ext_resource path="res://Items/ItemProtoset.tres" type="Resource" id=5]
[ext_resource path="res://Things/Assets/Things/Desk.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 6 )

[node name="DeskThing" type="StaticBody2D" groups=["power_receivers", "workers"]]
script = ExtResource( 3 )

[node name="PowerReceiver" type="Node" parent="."]
script = ExtResource( 1 )

[node name="WorkComponent" type="Node" parent="."]
script = ExtResource( 4 )

[node name="InputInventoryGrid" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 5 )
size = Vector2( 2, 1 )

[node name="OutputInventoryGrid" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 5 )
size = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[connection signal="work_accomplished" from="WorkComponent" to="." method="_on_WorkComponent_work_accomplished"]
[connection signal="work_done" from="WorkComponent" to="." method="_on_WorkComponent_work_done"]
[connection signal="work_enabled_changed" from="WorkComponent" to="." method="_on_WorkComponent_work_enabled_changed"]
